# aurora

./: .gitignore  Cargo.toml  README.md  client_out.txt  ff_test.aur
crates/aurora-ast/: Cargo.toml
crates/aurora-ast/src/: lib.rs  monomorphize.rs  schedule.rs
crates/aurora-audio/: Cargo.toml
crates/aurora-audio/src/: engine.rs  lib.rs  synth.rs
crates/aurora-check/: Cargo.toml
crates/aurora-check/src/: ecs.rs  lib.rs  moves.rs  regions.rs  resolve.rs  symbols.rs  walk.rs
crates/aurora-check/tests/: check.rs
crates/aurora-codegen/: Cargo.toml
crates/aurora-codegen/src/: lib.rs  tests.rs
crates/aurora-debug/: Cargo.toml
crates/aurora-debug/src/: lib.rs
crates/aurora-diag/: Cargo.toml
crates/aurora-diag/src/: lib.rs
crates/aurora-exe/: Cargo.toml  build.rs
crates/aurora-exe/src/: main.rs
crates/aurora-gfx/: Cargo.toml
crates/aurora-gfx/src/: lib.rs
crates/aurora-gpu/: Cargo.toml
crates/aurora-gpu/src/: lib.rs  live.rs
crates/aurora-interp/: Cargo.toml
crates/aurora-interp/src/: lib.rs  tests.rs  value.rs
crates/aurora-lexer/: Cargo.toml
crates/aurora-lexer/src/: lib.rs  token.rs
crates/aurora-lexer/tests/: lex.rs
crates/aurora-lsp/: Cargo.toml
crates/aurora-lsp/src/: lib.rs  main.rs
crates/aurora-net/: Cargo.toml
crates/aurora-net/src/: bitpack.rs  channel.rs  fixed.rs  interest.rs  lagcomp.rs  lib.rs  lockstep.rs  predict.rs  rng.rs  snapshot.rs  tests.rs  transport.rs
crates/aurora-parser/: Cargo.toml
crates/aurora-parser/src/: expr.rs  flatten.rs  item.rs  lib.rs  pat.rs  stmt.rs  ty.rs
crates/aurora-parser/tests/: parse.rs
crates/aurora-render3d/: Cargo.toml
crates/aurora-render3d/src/: anim.rs  lib.rs  mesh.rs  model.rs  render.rs  scene.rs
crates/aurora-runtime/: Cargo.toml
crates/aurora-runtime/src/: lib.rs  nav3d.rs  netgame.rs  phys3d.rs
crates/aurora-shader/: Cargo.toml
crates/aurora-shader/src/: lib.rs  tests.rs
crates/aurora-span/: Cargo.toml
crates/aurora-span/src/: lib.rs
crates/aurora-std/: Cargo.toml
crates/aurora-std/src/: lib.rs
crates/aurora-typeck/: Cargo.toml
crates/aurora-typeck/src/: convert.rs  lib.rs  tests.rs
crates/aurora-typeck/tests/: checks.rs
crates/aurora-types/: Cargo.toml
crates/aurora-types/src/: lib.rs
crates/aurora-window/: Cargo.toml
crates/aurora-window/examples/: demo.rs
crates/aurora-window/src/: imm.rs  input.rs  lib.rs
crates/aurorac/: Cargo.toml  build.rs
crates/aurorac/src/: main.rs
docs/: 01-grammar-and-types.md  02-netcode-replication.md  03-implementation-roadmap.md  04-stdlib-and-builtins.md
examples/: capstone.aur  compute.aur  draw.aur  ecs.aur  ffi.aur  game.aur  game_window.aur  gamedev.aur  generic_enum.aur  gpu_shader.aur  mp_shooter3d.aur  native.aur  netcode.aur  parallel.aur  physics.aur  physics3d.aur  shader.aur  shooter3d.aur  showcase.aur  spinner.aur
