[package]
name = "aurora-typeck"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aurora-span.workspace = true
aurora-diag.workspace = true
aurora-lexer.workspace = true
aurora-ast.workspace = true
aurora-types.workspace = true

[dev-dependencies]
aurora-parser.workspace = true
